src/MainPage.css
.container {
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
  display: grid;
  grid-template-columns: 0.2fr 0.9fr 1fr 1fr 0.2fr;
  grid-template-rows: 0.5fr 2fr 0.5fr;
  gap: 0px 0px;
  grid-template-areas:
    'up up up up up'
    'quote quote quote quote quote'
    'down down down down down';
}

.up {
  display: grid;
  grid-template-columns: 0.05fr 0.3fr 0.3fr 0.3fr 0.05fr;
  grid-template-rows: 0.4fr 0.6fr;
  gap: 0px 0px;
  grid-template-areas:
    '. . . . .'
    '. logo . . .';
  grid-area: up;
  color: rgba(255, 255, 255, 0.726);
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: stretch; */
}

.logo {
  grid-area: logo;
}

.sota {
  font-size: 100%;
}

.mini {
  font-size: 35%;
}

.quote {
  display: grid;
  grid-template-columns: 0.05fr 0.9fr 0.05fr;
  grid-template-rows: 1fr auto;
  gap: 0px 0px;
  grid-template-areas:
    '. . .'
    'l text r';
  grid-area: quote;
  background: rgb(0, 0, 0);
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 0.8) 0%,
    rgba(0, 0, 0, 0.5) 50%,
    rgba(0, 0, 0, 0) 100%
  );
}

.l {
  grid-area: l;
}

.r {
  grid-area: r;
}

.text {
  grid-area: text;
  color: white;
  text-align: center;
  justify-self: 0nd;
  margin: auto;
}

.down {
  display: grid;
  grid-template-columns: 0.05fr 0.3fr 0.3fr 0.3fr 0.05fr;
  grid-template-rows: 0.1fr 0.2fr 0.7fr;
  gap: 0px 0px;
  grid-template-areas:
    '. . . . .'
    '. . . name .'
    '. . . . .';
  grid-area: down;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.8);
  align-items: start;
  /* background: rgb(0, 0, 0);
  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%); */
}

.name {
  color: white;
  grid-area: name;
  text-align: end;
  align-items: start;
  font-size: 70%;
}

